# oa

./: .gitignore  CMakeLists.txt  LICENSE  README.md
base/: mannequinue5.py
oa/: __init__.py
oa/maya/: Anim.py  Core.py  Retarget.py  Rig.py  __init__.py
oa/maya/api/: __init__.py  template.py
oa/maya/api/anim/: timeeditor.py
oa/maya/api/core/: attribute.py  fileio.py  namespace.py  object.py
oa/maya/api/retarget/: __init__.py  ctrl.py  humanik.py  unreal.py
oa/maya/api/rig/: __init__.py  build.py  component.py  ctrl.py  utils.py
oa/maya/resources/: NodeIDs.txt  Shapes.txt
oa/maya/resources/plugins/python/: dynamicNode.py
oa/maya/resources/scripts/: speedLocatorMainMenu.py
oa/maya/resources/scripts/others/: buildObjectMenuItemsNowOverride.mel  dagMenuProcOverride.mel  hikInputSourceUtils.mel  hikOverrides.mel
oa/maya/resources/templates/: AEcomponentTemplate.mel  AEctrlTemplate.mel  AEfootRollSolverTemplate.mel  AEik2bSolverTemplate.mel  AEmetaDataTemplate.mel  AEshakeNodeRotTemplate.mel  AEspeedLocatorTemplate.mel  AEtwistSolverTemplate.mel  ctrls.py
src/cgcmake/modules/: FindMaya.cmake
src/maya/: CMakeLists.txt  ComponentNode.h  CtrlCmd.cpp  CtrlCmd.h  CtrlNode.cpp  DisplayNode.h  FootRollSolver.cpp  Ik2bSolver.cpp  Ik2bSolver.h  IkCommand.cpp  IkCommand.h  MainPlugin.cpp  MetaDataCmd.cpp  MetaDataCmd.h  MetaDataNode.h  NodeIDs.txt  SpaceSwitchNode.h  footPrintNodeGeoOverride.h  rawfootPrintNode.h
src/maya/api/: AnimControl.hpp  Attribute.hpp  CMakeLists.txt  Global.hpp  LMAnimControl.h  LMAnimControl.hpp  LMAttribute.h  LMAttribute.hpp  LMGlobal.h  LMGlobal.hpp  LMObject.h  LMObject.hpp  LMPlugin.h  LMPlugin.hpp  LMRigUtils.h  LMRigUtils.hpp  LMScene.h  LMScene.hpp  LMSolve.h  LMSolve.hpp  LMText.h  LMText.hpp  MathUtility.hpp  Plugin.hpp  RigUtils.hpp  Scene.hpp  Shapes.cpp  Shapes.hpp  Solve.hpp  Text.hpp  Utils.h  Utils.hpp
src/maya/node/: CMakeLists.txt  ComponentNode.h  ComponentNode.hpp  Ctrl.cpp  Ctrl.hpp  CtrlCmd.cpp  CtrlCmd.h  CtrlCmd.hpp  CtrlNode.cpp  CtrlNode.h  CtrlNode.hpp  MetaDataCmd.cpp  MetaDataCmd.hpp  MetaDataNode.cpp  MetaDataNode.hpp  PerlinNoise.cpp  PerlinNoise.hpp  ShakeCmd.cpp  ShakeCmd.hpp  ShakeCommand.cpp  ShakeCommand.hpp  ShakeNode.cpp  ShakeNode.hpp  ShakeNodeRot.cpp  ShakeNodeRot.hpp  ShapeNode.hpp  Shapes.hpp  ShapesDefinition.hpp  SpaceSwitchNode.h  SpaceSwitchNode.hpp  Speedometer.cpp  Speedometer.hpp  SpeedometerCmd.cpp  SpeedometerCmd.hpp  TransformShape.cpp  TransformShape.hpp
src/maya/node/backup/: CtrlCmd.cpp  CtrlNode.hpp
src/maya/solve/: CMakeLists.txt  FootRollSolver.cpp  FootRollSolver.h  FootRollSolver.hpp  Ik2bSolver.cpp  Ik2bSolver.h  Ik2bSolver.hpp  IkCommand.cpp  IkCommand.hpp  TwistSolver.cpp  TwistSolver.h  TwistSolver.hpp
src/maya/temp/: CMakeLists.txt  DisplayNode.hpp  footPrintNodeGeoOverride.hpp  rawfootPrintNode-stripped-win32.h  rawfootPrintNode.hpp
